Fixed details alignment on cards

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -214,6 +214,7 @@ ul:has(.tag) {
   font-size: var(--text-medium);
   font-weight: 400 !important;
   margin: 1rem 0 .5rem;
+  margin-bottom: auto;
 }
 .grid-item h3:hover {
   text-decoration: underline;
@@ -223,7 +224,7 @@ ul:has(.tag) {
   flex-direction: column;
   flex-grow: 1;
   flex-shrink: 0;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 .grid-item:hover {
   background-color: var(--color-lighter-background);
@@ -284,6 +285,8 @@ ul:has(.tag) {
   font-family: var(--family-code);
   font-size: calc(var(--text-small) * 0.8);
   margin-bottom: .5rem;
+  padding-top: .5rem;
+  border-top: 2px solid var(--color-text-faded);
 }
 .grid-item__worktype > span:not(:last-child)::after {
   content: ", ";
